--- a/style/main.css
+++ b/style/main.css
@@ -7,9 +7,8 @@
     /*배경*/
     body {
         background-color: RGB(255,255,153); 
-        /* background-image: url('img/햄버거감튀.png'),url('img/콜라치킨.png'),
-        url('img/햄버거감튀.png'),url('img/콜라치킨.png'),url('img/햄버거감튀.png'),
-        url('img/콜라치킨.png'),url('img/햄버거감튀.png'),url('img/콜라치킨.png'); */
+        background-image: url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),
+        url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'); 
         background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;
         background-repeat: repeat-x;
         background-size: 300px;  
@@ -17,36 +16,54 @@
 
     /*타이틀*/
     .title{
-        font-size: 8em;
+        font-size: 5em;
         font-family: cooper;
         color: #41A541;
         text-align: center;
         /*text-shadow:  8px 13px rgba(0, 0, 0, 0.16) ;*/
         text-shadow: -4px 0  #000 ;
-        margin-top: 240px;
-        position: absolute;
+       
+        margin: 0 auto;
+        margin-top: 185px;
         left: 50%;
-        transform: translateX(-50%);
+        /*transform: translateX(3%);*/
         top: 15%;
     }
 
     /*버튼*/
-    .gameStart{
-        width: 469px;
-        height: 186px;
+    /*.gameStart{
+        width: 300px;
+        height: 140px;
         position: absolute;
-        top:55%;
+        top: 55%;
         left: 50%;
         transform: translateX(-50%);
-        font-size: 45px;
+        font-size: 43px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-weight: bold;
-        background-color: rgba(255 35 0);
+        background-color: rgb(235, 64, 64);
         border-radius: 30px;
+        margin: 0 auto;
+        margin-top: 80px;
+        
+    }*/
+    .shop{
+        width: 30px;
+        height: 140px;
+        position: absolute;
+        top: 50%;
+        left: 80%;
+        transform: translateX(-50%);
+        right: 30;
+        transform: translateX(-30%);
+        font-size: 40px;
+        margin: 0 auto;
+        margin-top: 100px;
     }
+
     /*버튼 클릭하고 색이나 글자 바꾸고 싶으면 여기 수정*/
     .gameStart:hover{
         
-        background-color: aqua;
+        background-color: rgb(118, 216, 136);
     }
 
