--- a/style/main.css
+++ b/style/main.css
@@ -6,19 +6,20 @@
 
     /*배경*/
     body {
+        width: 1200px;
+        height: 800px;
         background-color: RGB(255,255,153); 
-        background-image: url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),
-        url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'); 
-        background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;
+        /*background-image: url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),
+        url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'); */
+       /* background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;*/
         background-repeat: repeat-x;
         background-size: 300px;  
-            animation: displace 4s linear infinite;
+        animation: displace 4s linear infinite;
         }
-        @keyframes displace {
-            from { background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;
+       /*from { background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;
             } to { background-position: center 1200px;
         }
-    }
+    }*/
     /*타이틀*/
     .title{
         font-size: 5em;
@@ -27,33 +28,29 @@
         text-align: center;
         /*text-shadow:  8px 13px rgba(0, 0, 0, 0.16) ;*/
         text-shadow: -4px 0  #000 ;
-       
-        margin: 0 auto;
-        margin-top: 185px;
-        left: 50%;
-        /*transform: translateX(3%);*/
+      /*  left: 50%;
+        transform: translateX(50%); */
         top: 15%;
-    }
-
-    .shop{
-        width: 30px;
-        height: 140px;
-        position: absolute;
-        top: 50%;
-        left: 80%;
-        transform: translateX(-50%);
-        right: 30;
-        transform: translateX(-30%);
-        font-size: 40px;
-        margin: 0 auto;
-        margin-top: 100px;
-    }
-
-    /*버튼 클릭하고 색이나 글자 바꾸고 싶으면 여기 수정*/
-   /* .gameStart:hover{
         
-        background-color: rgb(118, 216, 136);
-    } */
+    }
+
+   .storePng, .rankPng, .helpPng{
+        position: relative;
+    }
+    .gameStart_btn{
+        display: block;
+        width :300px;
+        height: 100px;
+        margin-left: 450px;
+        background-color: red;
+        color: black; 
+    }
+    .helpPng{
+        width: 100px;
+        height: 80px;
+    }
+    /*버튼 누를 시 효과*/
+
     
     
 
