--- a/style/main.css
+++ b/style/main.css
@@ -41,7 +41,7 @@
         height: 100px;
         margin: 0 auto;
         margin-top: 60px;
-        background-color: #F16650;
+        background-color: #ee5139;
         font-size: 3em;
         font-family: 'Jua', sans-serif;
         color: white; 
@@ -56,8 +56,6 @@
         margin-top: 30px;
         margin-right: 50px;
     }
-
-
 
     /*버튼 누를 시 효과*/
 #gameStart_btn:hover{
