--- a/style/help1.css
+++ b/style/help1.css
@@ -1,7 +1,17 @@
+/*도움말1 */
+
+body{
+    background-image: url('../img/paper2.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
 #goMain_btn{
     position: relative;
     margin: 40px;
 }
+
 #disc{
     text-align: center;
     margin: 0 auto; 
@@ -12,23 +22,22 @@
     font-size: 5em;
     font-family: 'Jua', sans-serif;
 }
+
 #story{
     font-family: 'songmyong', cursive;
     margin-top: 100px;
     font-size: 50px;
 }
+
 #runningMan{
     margin-top: -270px;
     float: left;
 }
+
 #next_btn{
     width: 80px;
     height: 50px;
     margin-right: 70px;
-    float: right;
 }
-body{
-    background-image: url('../img/paper2.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
+
