--- a/style/help1.css
+++ b/style/help1.css
@@ -1,11 +1,11 @@
 /*도움말1 */
 
-body{
+/*body{
     background-image: url('../img/paper2.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-}
+}*/
 
 #goMain_btn{
     position: relative;
@@ -16,7 +16,6 @@ body{
     text-align: center;
     margin: 0 auto; 
     margin-top: -9px;
-    /*background-color: white;*/
     width: 80%;
     height: 900px;
     font-size: 5em;
@@ -30,7 +29,8 @@ body{
 }
 
 #runningMan{
-    margin-top: -270px;
+    position: absolute;
+    bottom: 105px;
     float: left;
 }
 
@@ -38,6 +38,9 @@ body{
     width: 80px;
     height: 50px;
     margin-right: 70px;
+    position: absolute;
+    float: right;
+    bottom: 120px;
 }
 
 
