--- a/style/help2.css
+++ b/style/help2.css
@@ -7,7 +7,7 @@
     background-color: white;
     width: 80%;
     height: 900px;
-    font-size: 5em;
+    font-size: 4em;
     font-family: 'Jua', sans-serif;
 }
 #rule{
@@ -19,5 +19,7 @@
     width: 80px;
     height: 50px;
     margin-left: 70px;
+    position: absolute;
+    bottom: 110px;
     float: left;
 }
