--- a/style/main.css
+++ b/style/main.css
@@ -9,23 +9,25 @@
     /*배경*/
     body {
         background-color: RGB(255,255,153); 
-        /*background-image: url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),
-        url('../img/콜라치킨.png'),url('../img/햄버거감튀.png'),url('../img/콜라치킨.png'); 
+      /*  background-image: url('/img/main/햄버거감튀.png'),url('/img/main/콜라치킨.png'),url('/img/main/햄버거감튀.png'),
+        url('/img/main/콜라치킨.png'),url('/img/main/햄버거감튀.png'),url('/img/main/콜라치킨.png'),url('/img/main/햄버거감튀.png'),
+        url('/img/main/콜라치킨.png'); 
         background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;
-        background-repeat: repeat-x;*/
+        background-repeat: repeat-x;
         
-        /*animation: displace 4s linear infinite;
+        animation: displace 4s linear infinite;
        {
-        from { background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;} 
+        from { background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;
         to { background-position: center 1200px; }
-       } */
+       */
 
     }
 
     /*타이틀*/
     #title{
         margin: 150px auto auto auto;
-        font-size: 7em;
+        font-size: 8em;
+    
         font-family: cooper;
         color: #41A541;
         text-align: center;
@@ -35,29 +37,37 @@
     }
 
     /* 버튼 가운데 맞추기 위한 div */
-    #menu_div{
-        margin-top: 130px;
-        text-align: center;
-    }
+
 
     /* 버튼 */
-    #gameStart_btn, #help_btn{  
-        width :380px;
-        height: 100px;
-        margin: 0 auto;
-        margin-top: 60px;
+    #gameStart_btn{  
+        width :440px;
+        height: 140px;
         background-color: #ee5139;
-        font-size: 3em;
+        font-size: 4em;
         font-family: 'Jua', sans-serif;
         color: white; 
-        border-radius: 40px;
+        border-radius: 30px;
+
+        /*버튼 가운데 정렬*/
+        position: absolute;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, 0%);
     }
-    
+
+    #helpPng{
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        bottom: 70px;
+        right: 100px;
+    }
     /*버튼 누를 시 효과*/
-#gameStart_btn:hover{
-    background-color: blue;
-    color: aliceblue;
-}
+    #gameStart_btn:hover{
+        background-color: blue;
+        color: aliceblue;
+    }
     
     
 
