--- a/style/help1.css
+++ b/style/help1.css
@@ -23,7 +23,7 @@
 }
 
 #story{
-    font-family: 'songmyong', cursive;
+    font-family: 'Black Han Sans', sans-serif;
     margin-top: 100px;
     font-size: 50px;
 }
