--- a/style/round1.css
+++ b/style/round1.css
@@ -2,3 +2,17 @@ body{
     background-image: url('../img/round1/mart.jpg');
     background-size: cover;
 }
+
+.container{
+    margin-top: 50px;
+    display: grid; /*grid아이템을 사용*/
+    grid-template-columns: auto auto auto auto auto; /* 길이를 설정함 */
+    grid-gap: 10px;
+}
+
+.card{
+    width: 100px;
+    height: 150px;
+    margin: 0 auto;
+    perspective: 140px;
+}
