--- a/style/help1.css
+++ b/style/help1.css
@@ -11,21 +11,21 @@
     position: relative;
     margin: 40px;
 }
-
-#disc{
-    text-align: center;
-    margin: 0 auto; 
-    margin-top: -9px;
-    width: 80%;
-    height: 900px;
-    font-size: 5em;
+#title{
     font-family: 'Jua', sans-serif;
+    font-size: 4em;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
 
 #story{
+    text-align: center;
     font-family: 'Black Han Sans', sans-serif;
-    margin-top: 100px;
-    font-size: 50px;
+    font-size: 3em;
+    margin-top:100px;
 }
 
 #runningMan{
