--- a/style/round2.css
+++ b/style/round2.css
@@ -1,26 +1,15 @@
 
 .card_div{
-    width: 80%;
-    height: 600px;
     text-align: center;
 }
 
 /* 카드 */ 
 .card{
-    background-color: white;
-    width: 230px;
-    height: 280px;
+    background-color: aqua;
+    width: 200px;
+    height: 240px;
     margin-left: 50px;
     margin-top: 80px;
     display: inline-block;
+    border: 1px solid black;
 }
-.salad{
-    display: table;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
