--- a/style/round2.css
+++ b/style/round2.css
@@ -13,3 +13,13 @@
     display: inline-block;
     border: 1px solid black;
 }
+
+#next_btn{
+    width: 160px;
+    height: 100px;
+    font-size: 2em;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
