--- a/style/background.css
+++ b/style/background.css
@@ -6,7 +6,7 @@ body{
 }
 #bottom{
     width: 100vw;
-    height: 10%;
+    height: 105px;
     background-color: #A94A00;
     opacity: 0.41;
     position: absolute;
