게임 시작 전 멘트 추가

--- a/style/round3.css
+++ b/style/round3.css
@@ -4,6 +4,10 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-
-    
+}
+#disc{
+    text-align: center;
+    margin-top: 300px;
+    font-size: 3em;
+    font-family: 'Jua', sans-serif;
 }
