--- a/style/round3.css
+++ b/style/round3.css
@@ -11,3 +11,38 @@
     font-size: 3em;
     font-family: 'Jua', sans-serif;
 }
+
+#failRound{
+    width: 1000px;
+    height: 300px;
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin-left:-500px;
+    margin-top:-300px;
+
+    font-style: red;
+    text-align: center;
+    font-size: 7em;
+    font-family: 'Luckiest Guy', cursive; 
+}
+
+#btnDiv{
+    width: 100vw;
+    height: 200px;
+    position:absolute;
+    top: 50%;
+
+    text-align: center;
+}
+
+
+#goMainBtn, #retryBtn{
+    width: 170px;
+    height: 80px;
+    background-color: white;
+
+    margin: 70px;
+    font-size: 2em;
+    font-family: 'Luckiest Guy', cursive;
+}
