--- a/style/round1.css
+++ b/style/round1.css
@@ -23,6 +23,14 @@ body{
     transform: translate(-50%, 0%);
 }
 
+#heart{
+    width: 600px;
+    height: 100px;
+    position: absolute;
+    left: 30%;
+    transform: translate(-50%, 0%);
+}
+
 #disc{
     text-align: center;
     margin-top: 300px;
