--- a/style/round3.css
+++ b/style/round3.css
@@ -47,3 +47,18 @@
     font-size: 2em;
     font-family: 'Luckiest Guy', cursive;
 }
+
+#scoreDiv{
+    width: 500px;
+    height: 30px;
+
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin-left:-250px;
+    margin-top:-15px;
+
+    text-align: center;
+    font-size: 3em;
+    font-family: 'Jua', sans-serif;
+}
