--- a/style/round3.css
+++ b/style/round3.css
@@ -22,10 +22,9 @@
     margin-left:-500px;
     margin-top:-300px;
 
-    font-style: red;
     text-align: center;
     font-size: 7em;
-    font-family: 'Luckiest Guy', cursive; 
+    font-family: 'Righteous', cursive;
 }
 
 #btnDiv{
@@ -37,15 +36,15 @@
     text-align: center;
 }
 
-
 #goMainBtn, #retryBtn, #rankingBtn{
-    width: 170px;
-    height: 80px;
+    width: 180px;
+    height: 70px;
     background-color: white;
 
     margin: 70px;
     font-size: 2em;
-    font-family: 'Luckiest Guy', cursive;
+    font-family: 'Viga', sans-serif;
+    border-radius: 10px;
 }
 
 #scoreDiv{
@@ -56,24 +55,22 @@
     left:50%;
     top:50%;
     margin-left:-250px;
-    margin-top:-15px;
+    margin-top:-50px;
 
     text-align: center;
     font-size: 3em;
-    font-family: 'Jua', sans-serif;
+    font-family: 'Righteous', cursive;
 }
 
 #gameClearDiv{
     width: 1000px;
-    height: 300px;
+    height: 100px;
     position:absolute;
     left:50%;
-    top:50%;
+    top:200px;
     margin-left:-500px;
-    margin-top:-300px;
 
-    font-style: red;
     text-align: center;
-    font-size: 7em;
-    font-family: 'Luckiest Guy', cursive; 
+    font-size: 8em;
+    font-family: 'Righteous', cursive;
 }
