--- a/style/round2.css
+++ b/style/round2.css
@@ -1,41 +1,16 @@
-
-.card_div{
-    text-align: center;
-}
-
-/* 카드 */ 
-.card{
-    background-color: #734434;
-    width: 160px;
-    height: 210px;
-    margin-left: 60px;
-    margin-top: 80px;
-    display: inline-block;
-    border: 3px solid black;
-}
-
-#next_btn{
-    width: 160px;
+#progress{
+    width: 600px;
     height: 100px;
-    font-size: 2em;
     position: absolute;
-    top: 55%;
     left: 50%;
     transform: translate(-50%, 0%);
 }
 
-#completeRound{
-    width: 500px;
-    height: 300px;
-    position:absolute;
-    left:50%;
-    top:50%;
-    margin-left:-250px;
-    margin-top:-250px;
-
+#disc{
     text-align: center;
-    font-size: 7em;
-    font-family: 'Luckiest Guy', cursive;
+    margin-top: 300px;
+    font-size: 3em;
+    font-family: 'Jua', sans-serif;
 }
 
 #failRound{
@@ -47,10 +22,9 @@
     margin-left:-500px;
     margin-top:-300px;
 
-    font-style: red;
     text-align: center;
     font-size: 7em;
-    font-family: 'Luckiest Guy', cursive; 
+    font-family: 'Righteous', cursive;
 }
 
 #btnDiv{
@@ -62,13 +36,41 @@
     text-align: center;
 }
 
-
-#goMainBtn, #retryBtn{
-    width: 170px;
-    height: 80px;
+#goMainBtn, #retryBtn, #rankingBtn{
+    width: 180px;
+    height: 70px;
     background-color: white;
 
     margin: 70px;
     font-size: 2em;
-    font-family: 'Luckiest Guy', cursive;
+    font-family: 'Viga', sans-serif;
+    border-radius: 10px;
+}
+
+#scoreDiv{
+    width: 500px;
+    height: 30px;
+
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin-left:-250px;
+    margin-top:-50px;
+
+    text-align: center;
+    font-size: 3em;
+    font-family: 'Righteous', cursive;
+}
+
+#gameClearDiv{
+    width: 1000px;
+    height: 100px;
+    position:absolute;
+    left:50%;
+    top:200px;
+    margin-left:-500px;
+
+    text-align: center;
+    font-size: 8em;
+    font-family: 'Righteous', cursive;
 }
